UCJTC-32: Fixing workflow for image adjudication. layout is reverted in some cases. Buttons are aligned to be center. Notes is on left again. User can reset form by clicking cancel. Save still returns to admin list page.

--- a/src/app/admin/approve-image/approve-image.component.scss
+++ b/src/app/admin/approve-image/approve-image.component.scss
@@ -11,3 +11,6 @@ img {
 #confirmation-box {
     width: 100%;
 }
+button.close {
+    color: red;
+}
