--- a/src/app/admin/approve-images/approve-images.component.scss
+++ b/src/app/admin/approve-images/approve-images.component.scss
@@ -16,3 +16,7 @@ img {
     height: 75px;
     cursor: pointer;
 }
+img.loading-spinner {
+    width: 50%;
+    height: 50%;
+}
